--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,22 @@
-#site_header{
-    background-color: #4ea0ffFF;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
+
+#Container{
+    background-color: #4ea0ffFF;
+    background-image: url(../img/pattern.png);
+    width: 2000px;
+    height: 200px;  
+    position: static;
+}
+
+#logo{
+    width: 350px;
+    position: relative;
+    left: 10px;
+    top: 100px;
+}
+
+
