--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,11 @@ h4{
 .item1{
     background-color: yellow;
 }
+
+thead{
+    background-color: #20a9e5FF;
+}
+
+.riga{
+    background-color: #b1e5f2FF;
+}
